# Plume-Autonomous-Classification-and-Tracking

./: .gitignore  .importlinter  CLAUDE.md  LICENSE  README.md  TODO.md  architecture.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: bash_usage.md  conventions.md  docstrings.md  general_style.md  physics.md  strong_typing.md
.github/workflows/: ci.yml
config/: default.toml  flight.toml
data/calibration/: README.md
docs/: architecture.md
docs/adr/: 0001-python-only-drop-rust.md  0002-drop-bazel-uv-workspace.md  0003-subsystem-app-over-typed-bus.md  0004-onnx-detector-backend.md  0005-pure-core-thin-shell.md  0006-iss-attached-reliability-posture.md  0007-raw-mosaic-sensor-ingest.md  0008-closed-loop-gimbal-pointing.md  0009-iss-link-transport-command-ingress.md  0010-validation-configuration-matrix.md  README.md
docs/requirements/: vcrm.md  vcrm.toml
docs/superpowers/: goal-fsw-code-complete-sil.md  goal-fsw-validation.md
docs/superpowers/baseline/: 2026-06-06-pact-flight-parity-baseline.md
docs/superpowers/plans/: 2026-05-30-phase1-foundation-workspace-tooling.md  2026-05-31-phase2-libs.md  2026-05-31-phase3-hal.md  2026-05-31-phase4-core-foundations.md  2026-05-31-phase5a-payload-preprocess.md  2026-05-31-phase5b-payload-model.md  2026-06-01-phase10-sil-closed-loop.md  2026-06-01-phase5c-payload-tracking-gimbal.md  2026-06-01-phase5d-payload-controller.md  2026-06-01-phase5e-payload-app-shell.md  2026-06-01-phase6-fault-fdir.md  2026-06-01-phase7-iss-iface.md  2026-06-01-phase8-housekeeping-thermal-electrical.md  2026-06-01-phase9-core-composition-root.md  2026-06-09-sensor-ingest-chain.md  2026-06-10-pointing-gimbal-closed-loop.md  2026-06-13-fsw-code-complete-sil.md  2026-06-13-iss-link-transport-command-ingress.md  2026-06-13-pact-validation-config-matrix.md
docs/superpowers/specs/: 2026-05-30-pact-iss-payload-fsw-structure-design.md  2026-06-09-pact-flight-final-state-design.md
docs/validation/: hil-procedure.md  pil-procedure.md
profiles/: hil.toml  pil.toml  sil-link-real.toml  sil.toml
scenarios/: closed_loop_pointing.toml  command_route_exec.toml  ingress_auth_accept.toml  ingress_nack.toml  product_downlink.toml  safe_on_thermal.toml
scripts/: benchmark_inference.py  check_vcrm.py  demo_ccsds.py  demo_controller.py  demo_inference.py  demo_storage.py  download_dataset.py
src/pact/: __init__.py
src/pact/comms/: CLAUDE.md  CONTEXT.md  __init__.py  ccsds.py  downlink.py  process.py  scheduler.py  uplink.py
src/pact/comms/adr/: ADR-001-asyncio-concurrency.md
src/pact/controller/: CLAUDE.md  CONTEXT.md  __init__.py  arbiter.py  filter.py  kalman.py  lqr.py  process.py  safety.py  tracker.py
src/pact/controller/adr/: ADR-001-pure-functional-state-machine.md
src/pact/fault/: CLAUDE.md  CONTEXT.md  __init__.py  detector.py  handlers.py  process.py  safe_mode.py  watchdog.py
src/pact/fault/adr/: ADR-001-process-concurrency-and-handler-dispatch.md
src/pact/imaging/: CLAUDE.md  CONTEXT.md  __init__.py  camera.py  capture.py  process.py
src/pact/imaging/adr/: ADR-001-abstract-camera-protocol.md
src/pact/model/: CLAUDE.md  CONTEXT.md  __init__.py  architecture.py  augmentation.py  dataset.py  evaluate.py  inference.py  quantize.py  train.py
src/pact/model/adr/: ADR-001-inference-process-isolation.md
src/pact/ops/: CLAUDE.md  CONTEXT.md  __init__.py  config_loader.py  main.py  modes.py
src/pact/ops/adr/: ADR-001-centralized-config-load.md
src/pact/preprocessing/: CLAUDE.md  CONTEXT.md  __init__.py  band_select.py  crop.py  quality.py  radiometric.py
src/pact/preprocessing/adr/: ADR-001-preprocessing-embedded-in-inference-process.md
src/pact/storage/: CLAUDE.md  CONTEXT.md  __init__.py  manifest.py  process.py  writer.py
src/pact/storage/adr/: ADR-001-thread-concurrency-and-sha256.md
src/pact/telemetry/: CLAUDE.md  CONTEXT.md  __init__.py  health.py  reporter.py
src/pact/telemetry/adr/: ADR-001-thread-concurrency.md
src/pact/types/: CLAUDE.md  CONTEXT.md  __init__.py  config.py  enums.py  messages.py
src/pact/types/adr/: ADR-001-rust-idiomatic-type-system.md
tests/: CLAUDE.md  conftest.py
tests/integration/: test_comms_pipeline.py  test_controller_pipeline.py  test_inference_pipeline.py
tests/integration/e2e/: test_full_pipeline_smoke.py
tests/unit/comms/: test_ccsds.py  test_downlink.py  test_scheduler.py  test_uplink.py
tests/unit/controller/: test_arbiter.py  test_filter.py  test_safety.py  test_tracker.py
tests/unit/fault/: test_detector.py  test_watchdog.py
tests/unit/model/: test_architecture.py  test_dataset.py  test_evaluate.py
tests/unit/preprocessing/: test_band_select.py  test_quality.py  test_radiometric.py
tests/unit/storage/: test_manifest.py  test_writer.py
