[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pact"
version = "0.1.0"
description = "PACT: Plume Autonomous Capture Technology — onboard software for ISS external payload"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "segmentation-models-pytorch>=0.3",
    "albumentations>=1.3,<1.4.8",  # 1.4.8+ adds albucore→stringzilla (no py314 Windows wheel)
    "numpy>=1.24",
    "structlog>=23.0",
    # tomllib is stdlib in Python 3.11+; listed here for documentation purposes
    # "tomllib",
    "rasterio>=1.3",
    "shapely>=2.0",
    "requests>=2.28",
    "tqdm>=4.65",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
# FLIR camera SDK — not on PyPI; install manually from FLIR SDK installer.
# Required only on flight hardware. Tests use MockCamera instead.
camera = ["PySpin"]

dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",   # required for e2e test 60-second timeout assertion
    "mypy>=1.5",
    "ruff>=0.1",
    "import-linter>=2.0",
    # Workspace members installed editable so `uv sync --extra dev` (root-only
    # sync, as used by CI) makes flight/sim/tools importable for the smoke
    # tests, mypy, and import-linter. Without these, a root-only sync leaves the
    # members uninstalled.
    "pact-flight",
    "pact-sim",
    "pact-tools",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pact"]

[tool.pytest.ini_options]
# import-mode=importlib lets the two workspace-member smoke tests share the
# basename test_import.py without an __init__.py-induced module collision with
# the root tests/ package. pythonpath=["."] keeps the repo root importable so
# multiprocessing spawn subprocesses (e.g. tests/integration) can still resolve
# the tests package under importlib mode.
addopts = "--import-mode=importlib"
pythonpath = ["."]
testpaths = [
    "tests",
    "packages/flight/tests",
    "packages/sim/tests",
    "packages/tools/tests",
]
markers = [
    "e2e: end-to-end smoke tests (exclude from fast CI with -m 'not e2e')",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
# The two workspace-member smoke tests share the basename test_import.py.
# namespace_packages + explicit_package_bases let mypy map them to distinct
# src-layout module paths instead of colliding on a single "test_import" name.
namespace_packages = true
explicit_package_bases = true
# Resolve cross-package `flight.*` / `sim.*` / `tools.*` imports to the workspace
# SOURCE trees rather than the editable-installed (py.typed-less) packages. Without
# this, mypy falls back to Any for every cross-package symbol, silently disabling
# strict checking across modules (e.g. a function returning dict[str, WatchdogEntry]
# would collapse to dict[str, Any]). With these src dirs on the path, strict
# type-checking holds across the whole workspace.
mypy_path = ["packages/flight/src", "packages/sim/src", "packages/tools/src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.uv]
# UV reads [project.optional-dependencies] natively.
# Install dev deps with:    uv sync --extra dev
# Install camera SDK with:  uv sync --extra camera

[tool.uv.workspace]
members = ["packages/flight", "packages/sim", "packages/tools"]

[tool.uv.sources]
pact-flight = { workspace = true }
pact-sim = { workspace = true }
pact-tools = { workspace = true }

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]
