[project]
name = "pact"
version = "0.1.0"
description = "PACT: Plume Autonomous Capture Technology — onboard software for ISS external payload"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
# The repo root is a virtual uv workspace root (see [tool.uv] package = false): it builds no
# package and carries no runtime dependencies of its own. All flight/sim/tools/gse runtime deps
# are declared by the workspace members under packages/.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",   # required for the e2e test 60-second timeout assertion
    "mypy>=1.5",
    "ruff>=0.1",
    "import-linter>=2.0",
    # Workspace members installed editable so `uv sync --extra dev` (the root-only sync used by
    # CI) makes flight/sim/tools/gse importable for the smoke tests, mypy, and import-linter.
    "pact-flight",
    "pact-sim",
    "pact-tools",
    "pact-gse",
]

[tool.pytest.ini_options]
# import-mode=importlib lets the workspace-member smoke tests share the basename test_import.py
# across packages without an __init__.py-induced module-name collision.
addopts = "--import-mode=importlib"
testpaths = [
    "packages/flight/tests",
    "packages/sim/tests",
    "packages/tools/tests",
    "packages/gse/tests",
]
markers = [
    "e2e: end-to-end smoke tests (exclude from fast CI with -m 'not e2e')",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
# The workspace-member smoke tests share the basename test_import.py. namespace_packages +
# explicit_package_bases let mypy map them to distinct src-layout module paths instead of
# colliding on a single "test_import" name.
namespace_packages = true
explicit_package_bases = true
# Resolve cross-package `flight.*` / `sim.*` / `tools.*` / `gse.*` imports to the workspace
# SOURCE trees rather than the editable-installed (py.typed-less) packages. Without this, mypy
# falls back to Any for every cross-package symbol, silently disabling strict checking across
# modules. With these src dirs on the path, strict type-checking holds across the whole workspace.
mypy_path = ["packages/flight/src", "packages/sim/src", "packages/tools/src", "packages/gse/src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.uv]
# Virtual workspace root: builds no package, only aggregates the dev toolchain plus the
# workspace members. Install dev deps with: uv sync --extra dev
package = false

[tool.uv.workspace]
members = ["packages/flight", "packages/sim", "packages/tools", "packages/gse"]

[tool.uv.sources]
pact-flight = { workspace = true }
pact-sim = { workspace = true }
pact-tools = { workspace = true }
pact-gse = { workspace = true }
